Fixed the text-align in the build messages

--- a/webapp/packages/studio-app/src/components/preview-section/preview-build.css
+++ b/webapp/packages/studio-app/src/components/preview-section/preview-build.css
@@ -3,12 +3,16 @@
   padding: 5px;
   overflow: scroll;
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .preview-build .error {
   color: red;
+  text-align: left;
 }
 
 .preview-build .success {
   color: black;
+  text-align: left;
 }
